--- a/Fizz.html
+++ b/Fizz.html
@@ -6,7 +6,12 @@
 <body>
 <script type="text/javascript">
 	for (var i = 1; i<101; i++){
+		if (i%3 === 0){
+			console.log("Fizz");
+		}
+		else{
 		console.log(i);
+	}
 	}
 </script>
 </body>
